use more internal hugo templates

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,11 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"> -->
-{{- if ne .Summary "" -}}
-<meta name="description" content="{{ .Summary }}">
-{{- else -}}
-<meta name="description" content="{{ .Site.Params.Subtitle }}">
-{{- end }}
+<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 <meta name="author" content="{{ .Site.Params.Author }}">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ .Site.BaseURL }}/index.xml">
@@ -23,13 +19,6 @@
 
 {{ if eq .Page.RelPermalink "/" }}
 <title>{{ .Title }}</title>
-<meta property='og:title' content="{{ .Title }}">
-<meta property="og:type" content="website">
 {{ else }}
 <title>{{ .Title }} - {{ .Site.Title }}</title>
-<meta property='og:title' content="{{ .Title }} - {{ .Site.Title }}">
-<meta property="og:type" content="article">
 {{ end }}
-<meta property="og:url" content="{{ .Permalink }}">
-{{ with .Description }}<meta name="description" content="{{ . }}">{{ end }}
-{{ with .Params.image }}<meta property="og:image" content="{{ $.Site.BaseURL }}images/{{ . }}">{{ end }}
