--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,9 @@
 
     <head>
         {{ partial "head.html" . }}
+        {{ template "_internal/twitter_cards.html" . }}
+        {{ template "_internal/opengraph.html" . }}
+        {{ template "_internal/schema.html" . }}
     </head>
 
     <body>
